2000-12-06  Ken Raeburn  <raeburn@mit.edu>

	* sane_hostname.c (pty_make_sane_hostname, do_ntoa): Pass address
	as const sockaddr pointer.
	* libpty.h (pty_make_sane_hostname): Update prototype.

	* sane_hostname.c (sockaddrlen, downcase): New function.
	(do_ntoa, pty_make_sane_hostname): Reimplement using getnameinfo
	and getaddrinfo if available.
	* configure.in: Check for IPv6 support.

2000-11-01  Ezra Peisach  <epeisach@mit.edu>

	* configure.in: Quote macro use inside AC_CHECK_LIB. Change
	AC_FUNC_CHECK to AC_CHECK_FUNC, AC_HAVE_FUNCS to AC_CHECK_FUNCS
	and AC_HEADER_CHECK to AC_CHECK_HEADER..

2000-06-30  Ezra Peisach  <epeisach@mit.edu>

	* pty-int.h: Add getutmpx() prototype if needed.

	* configure.in: If getutmpx() exists on the system, test if a
	prototype is provided by the system headers.

2000-06-28  Ezra Peisach  <epeisach@mit.edu>

	* getpty.c (pty_getpty): More conditionalizing variable defintion
	based on OS features.

	* cleanup.c (pty_cleanup): Add parenthesis about assignment in
	conditional (gcc suggestion).

	* pty-int.h: Include pty.h if it exists (for openpty prototype
	under Linux).

	* configure.in: Check for pty.h

2000-06-26  Ezra Peisach  <epeisach@mit.edu>

	* libpty.h: If SOCK_DGRAM is not defined, provide a definition for
	struct sockaddr_in to satisfy prototype. (based on similar 
	code in k5-int.h).

	* update_wtmp.c (ptyint_update_wtmp), update_utmp.c
	(pty_update_utmp), open_slave.c (pty_open_slave), getpty.c
	(pty_getpty): conditionalize definition of variables based on code
	paths that are included.

	

1999-10-26  Tom Yu  <tlyu@mit.edu>

	* configure.in: Check for alpha*-dec-osf* instead of
	alpha-dec-osf*.

1999-10-26  Wilfredo Sanchez  <tritan@mit.edu>

	* Makefile.in: Clean up usage of CFLAGS, CPPFLAGS, DEFS, DEFINES,
	LOCAL_INCLUDES such that one can override CFLAGS from the command
	line without losing CPP search patchs and defines. Some associated
	Makefile cleanup.

1999-08-03  Ken Raeburn  <raeburn@mit.edu>
